# psoc-rust-template

./: README.md
psoc6_template/: make_elf.bat
psoc6_template/cm0p/: Cargo.toml  openocd.gdb
psoc6_template/cm0p/src/: main.rs
psoc6_template/cm4f/: Cargo.toml  memory.x  openocd.cfg
psoc6_template/cm4f/src/: main.rs
