[package]
name = "cm0p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["rt"]

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"

[dependencies.cast]
default-features = false
version = "0.2.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.psoc6-hal]
path = "C:/Users/Dave/Documents/fossils/psoc6_hal"
features = ["rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
